json.grammar

json            --> <object> | <array>

<object>        --> "{" <members> "}"
                  | "{" "}"

<members>       --> <key> ":" <value> "," <members>
                  | <key> ":" <value>
                  |

<array>         --> "[" "]"
                  | "[" <value> "]"
                  | "[" <value> "," <values> "]"

<values>        --> <value>
                  | <value> "," <values

<value>         --> <object>? <array>? <string>? <number>? <literal>?

<key>           --> <string>

<string>        --> "string"

<literal>       --> true | false | null

<number>        --> number
